<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/ivTransIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#F5F5F5"
            android:padding="8dp"
            android:src="@drawable/ic_play_circle"
            android:contentDescription="@string/desc_trans_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvTransName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d_trans_netflix"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvTransDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d_trans_netflix_desc"
                android:textColor="#757575"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/ivLocationIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_location"
                app:tint="@color/nav_active"
                android:visibility="gone"
                android:contentDescription="@string/logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTransValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_trans_netflix_val"
            android:textColor="@color/expense_red"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>